@@ -108,6 +108,14 @@ function edit_pblock($pbid){
 function save_pblock($dados,$edit=false){
 	$db =& Database::getInstance();
 
+	foreach ($dados as $k=>$field){
+		if(is_int($field)){
+			$dados[$k] = (int)$field;
+		}else{
+			$dados[$k] = htmlentities($field);
+		}
+	}
+	
 	if (!$edit)
 	  $sql = "INSERT INTO ".$db->prefix('block_positions')." (pname,title,description,block_default,block_type) VALUES ('".$dados['pname']."','".$dados['title']."','".$dados['description']."','0','L')";
 	else
