@@ -8,6 +8,7 @@ ImpressCMS ChangeLog
 * #2245090: Captcha being bypassed
 * #2098718: Sortlinks on Customtag-Table with bad color (sato-san)
 * #2245744: OpenID registration not possible from user.php (stranger)
+* #2300634: Blocks Positions admin not totaly secured (real_therplima)
 
 '''Added'''
 * TextSanitizer to admin users edit form, for sanitizing signature field when HTML is allowed. (vaughan)
